<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MadLibs</string>
    <string name="action_settings">Settings</string>
    <string name="switcher_button_text">Click here to enter words</string>
    <string name="second_text">Fill in answers below:</string>
    <string name="editText0">Nouns</string>
    <string name="editText1">Noun</string>
    <string name="editText2">Noun</string>
    <string name="editText3">Nouns</string>
    <string name="editText4">Noun</string>
    <string name="editText5">Adjective</string>
    <string name="editText6">Verb</string>
    <string name="editText7">Number</string>
    <string name="editText8">Adjective</string>
    <string name="editText9">Noun(s)</string>
    <string name="editText10">Verb</string>


</resources>
