<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              tools:context=".MainActivity"
              android:background="#4f271c">

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/imageView1">

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/second_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/second_text"
                    android:textColor="#ffffff"/>

            <EditText
                    android:id="@+id/editText0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editText0"
                    android:textColor="#ffffff"/>

            <EditText
                    android:id="@+id/editText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editText1"
                    android:textColor="#ffffff"/>

            <EditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editText2"
                    android:textColor="#ffffff"/>

            <EditText
                    android:id="@+id/editText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editText3"
                    android:textColor="#ffffff"/>

            <EditText
                    android:id="@+id/editText4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editText4"
                    android:textColor="#ffffff"/>

            <EditText
                    android:id="@+id/editText5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editText5"
                    android:textColor="#ffffff"/>

            <EditText
                    android:id="@+id/editText6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editText6"
                    android:textColor="#ffffff"/>

            <EditText
                    android:id="@+id/editText7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editText7"
                    android:textColor="#ffffff"/>

            <EditText
                    android:id="@+id/editText8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editText8"
                    android:textColor="#ffffff"/>

            <EditText
                    android:id="@+id/editText9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editText9"
                    android:textColor="#ffffff"/>

            <Button
                    android:id="@+id/returnButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Go!"
                    android:textColor="#FFFFFF"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
